<resources>
    <!-- Fragments -->
    <string name="app_name">FridgePal</string>
    <string name="food_name_NL">Naam</string>
    <string name="food_type_NL">Type</string>
    <string name="date_NL">Datum einde houdbaarheid</string>
    <string name="food_nameAutoFil_NL">Vul hier de naam van uw product in</string>
    <string name="name_required_NL">Gelieve een naam in te vullen</string>
    <string name="tht_NL">THT</string>
    <string name="tgt_NL">TGT</string>
    <string name="button_add_food_NL">Toevoegen</string>
    <string name="button_new_food_NL">Voeg voeding toe</string>
    <string name="delete_list_NL">Verwijder Lijst</string>
    <string name="hint_search_recipes_NL">Zoekterm (English only)</string>
    <string name="button_search_NL">Zoek</string>
    <!-- Notifications -->
    <string name="notification_NL">FridgePal Melding</string>
    <string name="notification_descr_NL">U heeft producten met een waarschuwing</string>
    <string name="num_expired_NL">Aantal over TGT:</string>
    <string name="num_near_expired_NL">Aantal bijna over TGT:</string>
    <string name="num_caution_NL">Aantal over THT:</string>
    <string name="time_notifications_NL">Tijdstip meldingen</string>
    <string name="enable_notifications_NL">Dagelijkse waarschuwingen</string>
    <string name="num_days_threshold_NL">Aantal dagen alarmgrens TGT</string>
    <string name="notification_channel_descr_NL">Meldingen over vervaldata</string>
</resources>